# OOD

./: README.md
lab1/: .clang-format  CMakeLists.txt  SimUDuck.cpp
lab1/1_1/: SimUDuck.cpp
lab1/1_1/lib/Duck/: Duck.h
lab1/1_1/test/: DuckTest.cpp  MockDanceBehavior.h
lab1/1_2/: SimUDuck.cpp
lab1/1_2/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
lab1/1_2/test/: DuckTest.cpp  MockFlyBehavior.h  MockQuackBehavior.h  MockQuackPolicy.h
lab1/1_3/: SimUDuck.cpp
lab1/1_3/lib/: DuckFunctions.h
lab1/1_3/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
lab1/1_4/: commands.txt  main.cpp
lab1/1_4/lib/gfx/: ICanvas.h  PNGCanvas.h
lab1/1_4/lib/service/: ShapeService.cpp  ShapeService.h  ShapeType.h
lab1/1_4/lib/shapes/: Color.h  Picture.cpp  Picture.h  Point.h  Rect.h  Shape.h
lab1/lab1_1/test/: DuckTest.cpp
lab1/lab1_2/: SimUDuck.cpp
lab1/lab1_2/lib/Duck/: RubberDuck.h
lab1/lib/: DuckFunctions.h
lab1/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
lab1/lib/Duck/Dance/: DanceMinuetBehavior.h
lab1/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h
lab1/lib/Duck/Quack/: IQuakBehavior.h  MuteQuackBehavior.h  QuackBehavior.h  SqueakBehavior.h
lab2/: CMakeLists.txt
lab2/1-2/WeatherStation/: main.cpp
lab2/1-2/WeatherStation/Observable/: CObservable.h  IObservable.h
lab2/1-2/WeatherStation/Observer/: CDisplay.h  CStatistics.h  CStatsDisplay.h
lab2/1-2/test/: Test.cpp
lab2/3/WeatherStation/: main.cpp
lab2/3/WeatherStation/Observable/: CObservable.h  CWeatherData.h  IObservable.h
lab2/3/WeatherStation/Observer/: CDisplay.h  IObserver.h
lab2/3/test/: Test.cpp
lab2/4/WeatherStation/: main.cpp
lab2/4/WeatherStation/Observable/: CObservable.h  IObservable.h
lab2/4/WeatherStation/Observer/: CDisplay.h  CStatsDisplay.h  IObserver.h
lab2/4/test/: CObservableTest.cpp  DuoWeatherStationDisplayTest.cpp  Test.cpp
lab2/5-6/WeatherStation/: main.cpp
lab2/5-6/WeatherStation/Observable/: CObservable.h
lab2/5-6/WeatherStation/Observer/: CDisplay.h  CStatistics.h  CStatsDisplay.h  CWindStatistics.h  IObserver.h
lab2/5-6/test/: CObservableTest.cpp  DuoWeatherStationDisplayTest.cpp  Test.cpp
lab2/5/WeatherStation/: main.cpp
lab2/5/WeatherStation/Model/: SWeatherInfo.h
lab2/5/WeatherStation/Observable/: CObservable.h  CWeatherData.h  IObservable.h
lab2/5/WeatherStation/Observer/: CStatsDisplay.h
lab2/7/: main.cpp
lab2/7/Animal/: CAnimalData.h  CCattishObserver.h  CDoggyObserver.h
lab2/7/Animal/Model/: SAnimalInfo.h
lab2/7/Observable/: CObservable.h  IObservable.h
lab2/7/WeatherStation/: CFishermanDisplay.h  CWeatherData.h  main.cpp
lab2/7/WeatherStation/Observable/: CObservable.h  CWeatherData.h  IObservable.h
lab2/7/WeatherStation/Observer/: CDisplay.h  CFishermanDisplay.h  CStatsDisplay.h
lab2/7/test/: CObservableTest.cpp
lab2/8/: main.cpp
lab2/8/Observable/: CObservable.h  IObservable.h
lab2/8/WeatherStation/: CFishermanDisplay.h  CWeatherData.h
lab2/8/WeatherStation/Model/: SWeatherInfo.h  (+1 more)
lab2/8/test/: main.cpp
lab2/WeatherStation/: Observer.h  WeatherData.h  main.cpp
lab2/WeatherStation/Model/: SWeatherInfo.h
lab2/WeatherStation/Observable/: CWeatherData.h
lab2/WeatherStation/Observarble/: CObservable.h  IObservable.h
lab2/WeatherStation/Observer/: CStatsDisplay.h
lab2/test/: Test.cpp
lab3/: CMakeLists.txt
lab3/1_2/: Beverages.h  Condiments.h  IBeverage.h  main.cpp
lab3/3/: main.cpp
lab3/3/EncryptUtils/: CByteSubstitutionTable.h
lab3/3/InputStream/: CFileInputStream.h  CMemoryInputStream.h  IInputDataStream.h
lab3/3/OutputStream/: CFileOutputStream.h  CMemoryOutputStream.h  IOutputDataStream.h
lab3/test/3/: Test.cpp
lab4/: .gitignore  CMakeLists.txt
lab4/1/: Client.h  commands.txt  main.cpp
lab4/1/Canvas/: ICanvas.h
lab4/1/Designer/: CDesigner.h  Designer.h  IDesigner.h  PictureDraft.h
lab4/1/Painter/: IPainter.h  Painter.cpp  Painter.h
lab4/1/Shape/: IShapeFactory.h  Shape.cpp  Shape.h
lab4/1/ShapeFactory/: IShapeFactory.h  ShapeFactory.h
lab4/test/1/: Test.cpp
lab5/: CMakeLists.txt
lab5/2/: Commands.h  ICommand.h  Menu.h  MenuFP.h  Robot.h  main.cpp
lab5/src/: CommandHandler.h  main.cpp
lab5/src/Document/: CConstDocumentItem.h  CDocument.h  CDocumentItem.h  IDocument.h
lab5/src/Menu/: CMenu.h
lab5/test/: CDocumentTest.cpp  CMenuTest.cpp  DeleteItemCommandTest.cpp  HistoryTest.cpp  InsertImageCommandTests.cpp  InsertParagraphCommandTest.cpp  ReplaceTextCommandTest.cpp  ResizeImageCommandTests.cpp  SetTitleCommandTest.cpp  Test.cpp  main.cpp
lab6/: CMakeLists.txt
lab6/1/: ModernGraphicsAdapter.h  ModernGraphicsClassAdapter.h  graphics_lib.h  main.cpp  modern_graphics_lib.h  shape_drawing_lib.h
lab6/src/: ModernGraphicsClassAdapter.h  main.cpp  modern_graphics_lib.h  shape_drawing_lib.h
lab6/test/: main.cpp  test.cpp
lab7/: CMakeLists.txt
lab7/src/: CommandHandler.h  CommonTypes.h  IDrawable.h  commands.txt  main.cpp
lab7/src/Canvas/: Canvas.h  ICanvas.h
lab7/src/Menu/: CMenu.h
lab7/src/Shape/: CEllipse.h  CRectangle.h  CShape.h  CStyle.h  CTriangle.h  GroupShape.h  IGroupShape.h  IShape.h  IShapes.h  IStyle.h
lab7/src/ShapeFactory/: IShapeFactory.h  ShapeFactory.h  ShapeType.h
lab7/src/Slide/: CSlide.h  ISlide.h
lab7/test/: test.cpp
lab8/: CMakeLists.txt  DOCS.md
lab8/src/: CommandHandler.h  main.cpp
lab8/src/Menu/: CMenu.h
lab8/src/gumball_machine/: CGumballMachine.h  GumBallMachineWithDynamicallyCreatedState.h  GumBallMachineWithState.h  IGumballMachine.h  NaiveGumBallMachine.h
lab8/src/multi_gumball_machine/: CMultiGumballMachine.h  IMultiGumballMachine.h
lab8/test/: GumBallMachineTest.cpp  GumballMachineStateTest.cpp  MultiGumballMachineStateTest.cpp  MultiGumballMachineTest.cpp  MultiGumballNaiveMachineTest.cpp  StateTest.cpp  test.cpp
lab9/: CMakeLists.txt  DOCS.md
lab9/src/: CoW.h  Drawer.cpp  Drawer.h  Geom.h  Image.cpp  Image.h  ImageController.h  Tile.h  main.cpp
lab9/test/: main.cpp
(+116 files in other folders)
